--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -69,4 +69,18 @@ functions:
           # リソースを指定
           path: sample/test
           # メソッドを指定
-          method: get
+          method: post
+          # 統合サービスをLambdaにする
+          integration: lambda
+          # カスタムリクエストの作成
+          request:
+            # カスタムテンプレートの作成
+            template:
+              application/octet-stream:
+                '{"headers":{
+                  #foreach($key in $input.params().header.keySet())
+                  "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
+                  #end
+                  },
+                  "body": "$util.base64Encode($input.json(''$''))"
+                  }'
