--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -57,7 +57,24 @@ provider:
 #    - exclude-me.py
 #    - exclude-me-dir/**
 
+# サービス名を指定
+service: slf-sample
+
+# 使用するクラウドサービス(AWS)と言語(Pytho3.6)を指定
+provider:
+  name: aws
+  runtime: python3.6
+
+  # ステージを指定。開発と本番環境を切り分けることができます。
+  stage: dev
+  # デプロイするリージョンを指定
+  region: ap-northeast-1
+  # Lambdaに適用するIAM Roleを指定
+  role: arn:aws:iam::790499047482:role/lambda_basic_execution
+
+# Lambdaを構築
 functions:
+  # 関数名を指定
   hello:
     # handler関数を指定
     handler: handler.hello
@@ -72,6 +89,18 @@ functions:
           method: post
           # 統合サービスをLambdaにする
           integration: lambda
+          # カスタムリクエストの作成
+          request:
+            # カスタムテンプレートの作成
+            template:
+              application/octet-stream:
+                '{"headers":{
+                  #foreach($key in $input.params().header.keySet())
+                  "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
+                  #end
+                  },
+                  "body": "$util.base64Encode($input.json(''$''))"
+                  }'
           # カスタムレスポンスの作成
           response:
             # ヘッダーとテンプレートの指定
@@ -89,3 +118,32 @@ functions:
                 template: $input.path("$.errorMessage")
                 headers:
                   Content-Type: "'application/octet-stream'"
+# リソースの構築
+resources:
+  Resources:
+    # DynamoDBの構築
+    DynamoDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      Properties:
+        # キーの型を指定
+        AttributeDefinitions:
+          -
+            AttributeName: id
+            AttributeType: S
+          -
+            AttributeName: name
+            AttributeType: S
+        # キーの種類を指定（ハッシュorレンジキー）
+        KeySchema:
+          -
+            AttributeName: id
+            KeyType: HASH
+          -
+            AttributeName: name
+            KeyType: RANGE
+        # プロビジョニングするキャパシティーユニットの設定
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        # テーブル名の指定
+        TableName: TableName
