引数の順番が間違っていたっぽい

--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -129,7 +129,7 @@ resources:
             KeyType: HASH
           -
             AttributeName: type
-            KeyType: RANGE
+            KeyType: HASH
 
         # プロビジョニングするキャパシティーユニットの設定
         ProvisionedThroughput:
