キースキーマとなる属性以外最初に定義する必要はない？

--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -131,4 +131,4 @@ resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
         # テーブル名の指定
-        TableName: TableName
+        TableName: TableName1
