--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -116,7 +116,7 @@ functions:
             # リソースを指定
             path: sample/test
             # メソッドを指定
-            method: post
+            method: get
             # 統合サービスをLambdaにする
             integration: lambda
             # カスタムリクエストの作成
