--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -61,7 +61,7 @@ provider:
 # Lambdaを構築
 functions:
   # 関数名を指定
-  hello:
+  helloPost:
     # handler関数を指定
     handler: handler.hello
     timeout: 200
@@ -104,50 +104,50 @@ functions:
                 template: $input.path("$.errorMessage")
                 headers:
                   Content-Type: "'application/octet-stream'"
-    # 関数名を指定
-    hello:
-      # handler関数を指定
-      handler: handler.get
-      timeout: 200
-      # Lambdaのイベントトリガーを設定
-      events:
-        # トリガーとしてAPIGatewayを構築
-        - http:
-            # リソースを指定
-            path: sample/test
-            # メソッドを指定
-            method: get
-            # 統合サービスをLambdaにする
-            integration: lambda
-            # カスタムリクエストの作成
-            request:
-              # カスタムテンプレートの作成
-              template:
-                application/octet-stream:
-                  '{"headers":{
-                    #foreach($key in $input.params().header.keySet())
-                    "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
-                    #end
-                    },
-                    "body": "$util.base64Encode($input.json(''$''))"
-                    }'
-            # カスタムレスポンスの作成
-            response:
-              # ヘッダーとテンプレートの指定
-              headers:
-                Content-Type: "'application/octet-stream'"
-              template: $input.path('$')
-              # カスタムレスポンスコードの設定
-              statusCodes:
-                # デフォルトのステータスコード
-                200:
-                  pattern: ''
-                # カスタムステータスコード
-                401:
-                  pattern: '.*"statusCode": 401,.*'
-                  template: $input.path("$.errorMessage")
-                  headers:
-                    Content-Type: "'application/octet-stream'"
+  # 関数名を指定
+  helloGet:
+    # handler関数を指定
+    handler: handler.get
+    timeout: 200
+    # Lambdaのイベントトリガーを設定
+    events:
+      # トリガーとしてAPIGatewayを構築
+      - http:
+          # リソースを指定
+          path: sample/test
+          # メソッドを指定
+          method: get
+          # 統合サービスをLambdaにする
+          integration: lambda
+          # カスタムリクエストの作成
+          request:
+            # カスタムテンプレートの作成
+            template:
+              application/octet-stream:
+                '{"headers":{
+                  #foreach($key in $input.params().header.keySet())
+                  "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
+                  #end
+                  },
+                  "body": "$util.base64Encode($input.json(''$''))"
+                  }'
+          # カスタムレスポンスの作成
+          response:
+            # ヘッダーとテンプレートの指定
+            headers:
+              Content-Type: "'application/octet-stream'"
+            template: $input.path('$')
+            # カスタムレスポンスコードの設定
+            statusCodes:
+              # デフォルトのステータスコード
+              200:
+                pattern: ''
+              # カスタムステータスコード
+              401:
+                pattern: '.*"statusCode": 401,.*'
+                template: $input.path("$.errorMessage")
+                headers:
+                  Content-Type: "'application/octet-stream'"
 # リソースの構築
 resources:
   Resources:
