--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -131,7 +131,7 @@ functions:
                   },
                   "body": {
                   "id": "$input.params(`id`)",
-                  "type": "$input.params(`type')",
+                  "type": "$input.params(`type`)",
                   }
                   }'
           # カスタムレスポンスの作成
