--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -129,10 +129,7 @@ functions:
                   "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
                   #end
                   },
-                  "body": {
-                  "id": "$input.params(`id`)",
-                  "type": "$input.params(`type`)",
-                  }
+                  "body": "id"
                   }'
           # カスタムレスポンスの作成
           response:
