--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -129,7 +129,9 @@ functions:
                   "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
                   #end
                   },
-                  "body": "id"
+                  "body": {
+                  "id": "id"
+                  }
                   }'
           # カスタムレスポンスの作成
           response:
