--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -129,8 +129,7 @@ functions:
                   "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
                   #end
                   },
-                  "body":{
-                  "id": "id"
+                  "body": "$util.base64Encode($input.params())"
                   }
                   }'
           # カスタムレスポンスの作成
