--- a/python_test_20200123/serverless.yml
+++ b/python_test_20200123/serverless.yml
@@ -85,7 +85,7 @@ functions:
                   "$key": "$input.params().header.get($key)"#if($foreach.hasNext),#end
                   #end
                   },
-                  "body": "$input.params(''id'')"
+                  "body": "$input.json(''$'')"
                   }'
           # カスタムレスポンスの作成
           response:
